Updated the function to visualize

--- a/analysis_RMD_file.html
+++ b/analysis_RMD_file.html
@@ -425,7 +425,7 @@ data points to provide more accurate results.</p>
 ## ✖ dplyr::lag()      masks stats::lag()
 ## ✖ yardstick::spec() masks readr::spec()
 ## ✖ recipes::step()   masks stats::step()
-## • Dig deeper into tidy modeling with R at https://www.tmwr.org</code></pre>
+## • Search for functions across packages at https://www.tidymodels.org/find/</code></pre>
 <pre class="r"><code>library(themis)
 source(&quot;R/visualize.R&quot;)</code></pre>
 <p>Next we will use <code>read.csv()</code> to read the dataset of all
